add colibri demo

--- a/examples/demo_spc.ipynb
+++ b/examples/demo_spc.ipynb
@@ -115,11 +115,11 @@
     "\n",
     "mode = 'base' # Type of CASSi optical system\n",
     "img_size = sample.shape[-1]\n",
-    "m = 256 # Number of spectral bands\n",
-    "mq = int(math.sqrt(m)) # Number of spectral bands in each dimension\n",
+    "m = 256 \n",
+    "mq = int(math.sqrt(m)) \n",
     "spc =  SPC(img_size=img_size, m=m)\n",
     "\n",
-    "y = spc(sample) # CASSI measurements\n",
+    "y = spc(sample) # SPC measurements\n",
     "y = y.reshape(y.shape[0], -1, mq, mq)\n",
     "\n",
     "img = make_grid(y[:32], nrow=8, padding=1, normalize=True, range=None, scale_each=False, pad_value=0)\n",
@@ -175,7 +175,7 @@
     "from colibri_hdsp.metrics import psnr, ssim\n",
     "\n",
     "\n",
-    "epochs = 5\n",
+    "epochs = 1\n",
     "\n",
     "history = {\n",
     "    \"loss\": [],\n",
