--- a/examples/demo_colibri.ipynb
+++ b/examples/demo_colibri.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "import os \n",
-    "os.chdir(r'C:\\Users\\braya\\Documents\\github\\colibri-hdsp')"
+    "os.chdir('..')"
    ]
   },
   {
