fixed path recursive bug

--- a/examples/dip_example.ipynb
+++ b/examples/dip_example.ipynb
@@ -29,7 +29,7 @@
     "import matplotlib.pyplot as plt\n",
     "import tensorflow as tf\n",
     "import os\n",
-    "os.chdir(\"..\")\n",
+    "os.chdir(os.path.dirname(os.getcwd()))\n",
     "\n",
     "\n",
     "# Check GPU support\n"
