fixed path recursive bug

--- a/examples/demo_cassi.ipynb
+++ b/examples/demo_cassi.ipynb
@@ -15,7 +15,7 @@
    ],
    "source": [
     "import os \n",
-    "os.chdir('..')\n",
+    "os.chdir(os.path.dirname(os.getcwd()))\n",
     "print(\"Current Working Directory \" , os.getcwd())"
    ]
   },
