--- a/examples/dip_example.ipynb
+++ b/examples/dip_example.ipynb
@@ -66,7 +66,7 @@
     }
    ],
    "source": [
-    "from colibri_hdsp.datasets.datasets import Dataset\n",
+    "from colibri_hdsp.data.datasets import Dataset\n",
     "\n",
     "# example dataset\n",
     "data_path = 'cifar10'\n",
