Changed folder name

--- a/examples/demo_colibri.ipynb
+++ b/examples/demo_colibri.ipynb
@@ -80,7 +80,7 @@
     }
    ],
    "source": [
-    "from colibri_hdsp.data.datasets import Dataset\n",
+    "from colibri.data.datasets import Dataset\n",
     "\n",
     "# Load dataset\n",
     "\n",
@@ -149,7 +149,7 @@
    ],
    "source": [
     "import math\n",
-    "from colibri_hdsp.optics import SPC, CASSI\n",
+    "from colibri.optics import SPC, CASSI\n",
     "\n",
     "img_size = sample.shape[1:]\n",
     "\n",
@@ -213,11 +213,11 @@
     }
    ],
    "source": [
-    "from colibri_hdsp.models import build_network, Unet, Autoencoder\n",
-    "from colibri_hdsp.archs import E2E\n",
-    "from colibri_hdsp.train import Training\n",
-    "from colibri_hdsp.metrics import psnr, ssim\n",
-    "from colibri_hdsp.regularizers import (\n",
+    "from colibri.models import build_network, Unet, Autoencoder\n",
+    "from colibri.archs import E2E\n",
+    "from colibri.train import Training\n",
+    "from colibri.metrics import psnr, ssim\n",
+    "from colibri.regularizers import (\n",
     "    Reg_Binary,\n",
     "    Reg_Transmittance,\n",
     "    MinVariance,\n",
