--- a/main.ipynb
+++ b/main.ipynb
@@ -89,7 +89,7 @@
             "Requirement already satisfied: mpmath>=0.19 in /usr/local/lib/python3.10/dist-packages (from sympy->torch->colibri-hdsp==0.0.0) (1.3.0)\n",
             "Building wheels for collected packages: colibri-hdsp\n",
             "  Building wheel for colibri-hdsp (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for colibri-hdsp: filename=colibri_hdsp-0.0.0-py3-none-any.whl size=31148 sha256=b7916089d0681e107e4055b8a92bbc45c2feffb2818dade7b07e81ac9893eb91\n",
+            "  Created wheel for colibri-hdsp: filename=colibri-0.0.0-py3-none-any.whl size=31148 sha256=b7916089d0681e107e4055b8a92bbc45c2feffb2818dade7b07e81ac9893eb91\n",
             "  Stored in directory: /tmp/pip-ephem-wheel-cache-yq8ckd5j/wheels/24/e5/8a/82f00f0e9b1e0c7714cde6d2115c59bfbf56b855f5bb2f1e6f\n",
             "Successfully built colibri-hdsp\n",
             "Installing collected packages: nvidia-nvtx-cu12, nvidia-nvjitlink-cu12, nvidia-nccl-cu12, nvidia-curand-cu12, nvidia-cufft-cu12, nvidia-cuda-runtime-cu12, nvidia-cuda-nvrtc-cu12, nvidia-cuda-cupti-cu12, nvidia-cublas-cu12, lightning-utilities, nvidia-cusparse-cu12, nvidia-cudnn-cu12, nvidia-cusolver-cu12, torchmetrics, colibri-hdsp\n",
@@ -220,7 +220,7 @@
         }
       ],
       "source": [
-        "from colibri_hdsp.data.datasets import Dataset\n",
+        "from colibri.data.datasets import Dataset\n",
         "\n",
         "dataset_path = 'cifar10'\n",
         "keys = ''\n",
@@ -312,7 +312,7 @@
       ],
       "source": [
         "import math\n",
-        "from colibri_hdsp.optics import SPC, SD_CASSI, DD_CASSI, C_CASSI\n",
+        "from colibri.optics import SPC, SD_CASSI, DD_CASSI, C_CASSI\n",
         "\n",
         "img_size = sample.shape[1:]\n",
         "\n",
@@ -389,11 +389,11 @@
         }
       ],
       "source": [
-        "from colibri_hdsp.models import build_network, Unet, Autoencoder\n",
-        "from colibri_hdsp.archs import E2E\n",
-        "from colibri_hdsp.train import Training\n",
-        "from colibri_hdsp.metrics import psnr, ssim\n",
-        "from colibri_hdsp.regularizers import (\n",
+        "from colibri.models import build_network, Unet, Autoencoder\n",
+        "from colibri.archs import E2E\n",
+        "from colibri.train import Training\n",
+        "from colibri.metrics import psnr, ssim\n",
+        "from colibri.regularizers import (\n",
         "    Reg_Binary,\n",
         "    Reg_Transmittance,\n",
         "    MinVariance,\n",
